--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <iframe
                 src="https://3d.magicplan.app/#embed/?key=YTNjOTNmZGVlZjE5ZTljNzI5MWVjYWQzYzA5NDBiMmZjY2E4NzIwNmVkNTYzYWQ5ODg5OWU5OTFiMjQxMDZkNK%2Fia3wQxA1a2yRzQT2PISsqdoGz5Vvu82Rm3Nbnl9qNC4D%2Fs6%2Bu1MSoHE12ZH%2BHAw%3D%3D"
-                width="800px"
-                height="600px"
+                max-width="1920px" min-width="800px"
+                max-height="1080px" min-height="600px"
                 allowfullscreen="true"
                 style="border: 0;"
             ></iframe>
